--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,68 +1,6 @@
 <div class="container-fluid">
 
-  <!-- Header -->
-  <nav class="navbar navbar-expand-lg navbar-light bg-success">
-    <a class="navbar-brand text-white" href="#">bigBasket</a>
-    <ul class="navbar-nav ml-auto">
-      <li class="nav-item">
-        <a class="nav-link text-white" href="#">Home</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link text-white" href="#">Pages</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link text-white" href="#">Contact Us</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link text-white" href="#">
-          <i class="fas fa-shopping-cart"></i>
-        </a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link text-white" href="#">
-          <i class="fas fa-user"></i>
-        </a>
-      </li>
-    </ul>
-  </nav>
-
-  <div class="text-center mt-4">
-    <button class="btn btn-primary btn-sm mx-1">Fruits & Vegetables</button>
-    <button class="btn btn-primary btn-sm mx-1">Foodgrains</button>
-    <button class="btn btn-primary btn-sm mx-1">Bakery</button>
-    <button class="btn btn-primary btn-sm mx-1">Beverages</button>
-    <button class="btn btn-primary btn-sm mx-1">Snacks</button>
-    <button class="btn btn-primary btn-sm mx-1">Soft Drinks</button>
-    <button class="btn btn-primary btn-sm mx-1">Fragrances</button>
-    <button class="btn btn-primary btn-sm mx-1">T-shirts</button>
-    <button class="btn btn-primary btn-sm mx-1">Technology</button>
-    <button class="btn btn-primary btn-sm mx-1">String</button>
-  </div>
-
-  <!-- Products -->
-  <div class="row mt-4" *ngIf="getAllProductsResponse.data.length > 0; else loading">
-    <div class="col-md-3 mb-4" *ngFor="let productDetails of getAllProductsResponse.data">
-      <div class="card h-100">
-        <img [src]="productDetails.productImageUrl" class="card-img-top" alt="{{ productDetails.productShortName }}">
-        <div class="card-body">
-          <h5 class="card-title">{{ productDetails.productName }}</h5>
-          <p class="card-text text-danger">{{ productDetails.productPrice }}</p>
-          <div>
-            <span class="text-muted">({{ productDetails.categoryName }})</span>
-          </div>
-        </div>
-        <div class="card-footer bg-transparent">
-          <button class="btn btn-success btn-sm w-100">
-            <i class="fas fa-shopping-cart"></i> Add to Cart
-          </button>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-
-<ng-template #loading>
-  <p>Loading products...</p>
-</ng-template>
+  <app-header></app-header>
+  <app-products-page></app-products-page>
 
 <router-outlet />
