Routes are added for the pages, they're working fine

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
 <div class="container-fluid">
 
   <app-header></app-header>
-  <app-products-page></app-products-page>
 
-<router-outlet />
+  <router-outlet />
+
+  <div></div>
