--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,15 +1,18 @@
 <!-- Header -->
 <nav class="navbar navbar-expand-lg navbar-light bg-success">
-    <a class="navbar-brand text-white" href="#">bigBasket</a>
+    <a class="navbar-brand text-white" href="#">FB - ECommerce</a>
     <ul class="navbar-nav ml-auto">
         <li class="nav-item">
             <a class="nav-link text-white" href="#">Home</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link text-white" href="#">Pages</a>
+            <a class="nav-link text-white" href="/products">Products</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link text-white" href="#">Contact Us</a>
+            <a class="nav-link text-white" href="#">About Us</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link text-white" href="/cart">Cart</a>
         </li>
         <li class="nav-item">
             <a class="nav-link text-white" href="#">
