--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,26 +1,26 @@
 <!-- Header -->
 <nav class="navbar navbar-expand-lg navbar-light bg-success">
-    <a class="navbar-brand text-white" href="#">FB - ECommerce</a>
+    <a class="navbar-brand text-white" routerLink="/">FB - ECommerce</a>
     <ul class="navbar-nav ml-auto">
         <li class="nav-item">
-            <a class="nav-link text-white" href="#">Home</a>
+            <a class="nav-link text-white" routerLink="/">Home</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link text-white" href="/products">Products</a>
+            <a class="nav-link text-white" routerLink="/products">Products</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link text-white" href="#">About Us</a>
+            <a class="nav-link text-white" routerLink="/about-us">About Us</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link text-white" href="/cart">Cart</a>
+            <a class="nav-link text-white" routerLink="/cart">Cart</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link text-white" href="#">
+            <a class="nav-link text-white" routerLink="/cart">
                 <i class="fas fa-shopping-cart"></i>
             </a>
         </li>
         <li class="nav-item">
-            <a class="nav-link text-white" href="#">
+            <a class="nav-link text-white" routerLink="/profile">
                 <i class="fas fa-user"></i>
             </a>
         </li>
