--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -1,11 +1,43 @@
-.navbar {
-  padding: 1rem;
+.navbar .nav-link {
+  padding: 0.5rem;
+  color: white;
+  text-decoration: none;
+}
+
+.navbar .btn-link {
+  text-decoration: none;
+  color: white;
+  cursor: pointer;
 }
 
 .navbar-nav {
   margin-left: auto;
 }
 
-.cart-button {
-  margin-left: 1rem;
+.position-relative {
+  position: relative;
+}
+
+.cart-preview-dropdown {
+  position: absolute;
+  top: 100%;
+  right: 0;
+  background-color: white;
+  border: 1px solid #ddd;
+  padding: 10px;
+  width: 200px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  z-index: 1000;
+}
+
+.cart-preview-dropdown ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.cart-preview-dropdown li {
+  display: flex;
+  justify-content: space-between;
+  padding: 5px 0;
 }
