--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,28 +1,34 @@
 <!-- Header -->
 <nav class="navbar navbar-expand-lg navbar-light bg-success">
-    <a class="navbar-brand text-white" routerLink="/">FB - ECommerce</a>
+    <a class="navbar-brand text-white" [routerLink]="['/']">FB - ECommerce</a>
     <ul class="navbar-nav ml-auto">
         <li class="nav-item">
-            <a class="nav-link text-white" routerLink="/">Home</a>
+            <button class="nav-link btn btn-link text-white" [routerLink]="['/']">Home</button>
         </li>
         <li class="nav-item">
-            <a class="nav-link text-white" routerLink="/products">Products</a>
+            <button class="nav-link btn btn-link text-white" [routerLink]="['/products']">Products</button>
         </li>
         <li class="nav-item">
-            <a class="nav-link text-white" routerLink="/about-us">About Us</a>
+            <button class="nav-link btn btn-link text-white" [routerLink]="['/about-us']">About Us</button>
         </li>
-        <li class="nav-item">
-            <a class="nav-link text-white" routerLink="/cart">Cart</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link text-white" routerLink="/cart">
+
+        <!-- Cart Item with Hover Preview -->
+        <li class="nav-item position-relative" (mouseenter)="showCartPreview = true"
+            (mouseleave)="showCartPreview = false">
+            <button class="nav-link btn btn-link text-white" [routerLink]="['/cart']">
                 <i class="fas fa-shopping-cart"></i>
-            </a>
+                <span class="badge badge-pill badge-light">{{ cartItemCount }}</span>
+            </button>
+            <!-- Cart Preview Dropdown -->
+            <div class="cart-preview-dropdown" *ngIf="showCartPreview">
+                <app-cart-preview [custId]="customerId"></app-cart-preview>
+            </div>
         </li>
+
         <li class="nav-item">
-            <a class="nav-link text-white" routerLink="/profile">
+            <button class="nav-link btn btn-link text-white" [routerLink]="['/profile']">
                 <i class="fas fa-user"></i>
-            </a>
+            </button>
         </li>
     </ul>
 </nav>
