--- a/src/app/components/cart-preview/cart-preview.component.css
+++ b/src/app/components/cart-preview/cart-preview.component.css
@@ -7,7 +7,7 @@
   padding: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
   z-index: 10;
-  display: none; /* Hidden */
+  display: none;
   width: 200px;
 }
 
