--- a/src/app/components/cart-preview/cart-preview.component.html
+++ b/src/app/components/cart-preview/cart-preview.component.html
@@ -1,17 +1,12 @@
-<div class="cart-preview">
-    <ul *ngIf="cartItemsResponse.length > 0; else emptyCart">
-        <li *ngFor="let cart of cartItemsResponse">
-            <ng-container *ngFor="let item of cart.data.cartItems">
-                <img [src]="item.productImageUrl" alt="Product Image" width="30" height="30" />
-                <span>{{ item.productShortName }} ({{ item.quantity }})</span>
-                <span class="price">${{ item.productPrice * item.quantity }}</span>
-            </ng-container>
-        </li>
-    </ul>
-    <ng-template #emptyCart>
-        <p>Your cart is empty.</p>
-    </ng-template>
-    <div class="cart-total">
-        Total: ${{ cartTotal }}
+<div class="cart-container">
+  <i class="bi bi-cart3 cart-icon"></i>
+  <div class="cart-preview">
+    <div class="cart-subtotal">
+      Subtotal: <span>${{ cartTotal }}</span>
     </div>
+    <div class="cart-actions">
+      <button class="btn btn-primary" routerLink="/cart">View Cart</button>
+      <button class="btn btn-success" routerLink="/checkout-dialog" (click)="onCheckoutClick()">Checkout</button>
+    </div>
+  </div>
 </div>
