top-nav and product-details components are added.

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,3 +1,7 @@
+<!-- Top Nav -->
+ 
+<app-top-nav></app-top-nav>
+
 <!-- Header -->
 <nav class="navbar navbar-expand-lg navbar-light bg-success">
     <a class="navbar-brand text-white" [routerLink]="['/']">FB - ECommerce</a>
