--- a/src/app/pages/products-page/products-page.component.html
+++ b/src/app/pages/products-page/products-page.component.html
@@ -19,7 +19,7 @@
 
 <div class="row mt-4" *ngIf="getAllProductsResponse.data.length > 0; else loading">
     <div class="col-md-3 mb-4" *ngFor="let productDetails of getAllProductsResponse.data">
-        <app-product-details [data]="getAllProductsResponse.data"></app-product-details>
+        <app-product-details [productDetail]="productDetails"></app-product-details>
     </div>
 </div>
 
