--- a/src/app/components/product-details/product-details.component.html
+++ b/src/app/components/product-details/product-details.component.html
@@ -8,8 +8,6 @@
         </div>
     </div>
     <div class="card-footer bg-transparent">
-        <button class="btn btn-success btn-sm w-100">
-            <i class="fas fa-shopping-cart"></i> Add to Cart
-        </button>
+        <button class="btn btn-success btn-sm w-100" (click)="addToCart(productDetail)"><i class="fas fa-shopping-cart"></i> Add to Cart</button>
     </div>
 </div>
