--- a/src/app/pages/products-page/products-page.component.html
+++ b/src/app/pages/products-page/products-page.component.html
@@ -1,28 +1,26 @@
-<!-- Products -->
-
-<!-- Products Filters -->
-
-<div class="text-center mt-4">
-    <button class="btn btn-primary btn-sm mx-1">Fruits & Vegetables</button>
-    <button class="btn btn-primary btn-sm mx-1">Foodgrains</button>
-    <button class="btn btn-primary btn-sm mx-1">Bakery</button>
-    <button class="btn btn-primary btn-sm mx-1">Beverages</button>
-    <button class="btn btn-primary btn-sm mx-1">Snacks</button>
-    <button class="btn btn-primary btn-sm mx-1">Soft Drinks</button>
-    <button class="btn btn-primary btn-sm mx-1">Fragrances</button>
-    <button class="btn btn-primary btn-sm mx-1">T-shirts</button>
-    <button class="btn btn-primary btn-sm mx-1">Technology</button>
-    <button class="btn btn-primary btn-sm mx-1">String</button>
-</div>
-
-<!-- Products List -->
-
-<div class="row mt-4" *ngIf="getAllProductsResponse.data.length > 0; else loading">
-    <div class="col-md-3 mb-4" *ngFor="let productDetails of getAllProductsResponse.data">
-        <app-product-details [productDetail]="productDetails"></app-product-details>
+<div class="page">
+    <div class="text-center mt-4">
+        <button class="btn btn-primary btn-sm mx-1">Fruits & Vegetables</button>
+        <button class="btn btn-primary btn-sm mx-1">Foodgrains</button>
+        <button class="btn btn-primary btn-sm mx-1">Bakery</button>
+        <button class="btn btn-primary btn-sm mx-1">Beverages</button>
+        <button class="btn btn-primary btn-sm mx-1">Snacks</button>
+        <button class="btn btn-primary btn-sm mx-1">Soft Drinks</button>
+        <button class="btn btn-primary btn-sm mx-1">Fragrances</button>
+        <button class="btn btn-primary btn-sm mx-1">T-shirts</button>
+        <button class="btn btn-primary btn-sm mx-1">Technology</button>
+        <button class="btn btn-primary btn-sm mx-1">String</button>
     </div>
-</div>
 
-<ng-template #loading>
-    <p>Loading products...</p>
-</ng-template>
+    <!-- Products List -->
+
+    <div class="row mt-4" *ngIf="getAllProductsResponse.data.length > 0; else loading">
+        <div class="col-md-3 mb-4" *ngFor="let productDetails of getAllProductsResponse.data">
+            <app-product-details [productDetail]="productDetails"></app-product-details>
+        </div>
+    </div>
+
+    <ng-template #loading>
+        <p>Loading products...</p>
+    </ng-template>
+</div>
