--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -1,28 +1,63 @@
-.navbar .nav-link {
-  padding: 0.5rem;
-  color: white;
+.main-nav {
+  background-color: #198754;
+  color: #ffffff;
+  padding: 10px 0;
+}
+
+.main-nav .nav-items {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 25px;
+  margin: 0 auto;
+}
+
+.brand-logo a {
+  color: #ffffff;
+  font-size: 18px;
   text-decoration: none;
+  font-weight: bold;
 }
 
-.navbar .btn-link {
+.brand-logo a:hover {
+  text-decoration: underline;
+}
+
+.nav-links ul {
+  display: flex;
+  gap: 20px;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.nav-links ul li a {
+  color: #ffffff;
   text-decoration: none;
-  color: white;
-  cursor: pointer;
+  font-size: 16px;
+  padding: 5px 10px;
 }
 
-.navbar-nav {
-  margin-left: auto;
+.nav-links ul li a:hover {
+  text-decoration: underline;
 }
 
-.position-relative {
+.cart-item {
   position: relative;
+}
+
+.cart-item .cart-count {
+  color: #fff;
+  padding: 0px 5px;
+  font-size: 15px;
+  position: absolute;
 }
 
 .cart-preview-dropdown {
   position: absolute;
   top: 100%;
   right: 0;
-  background-color: white;
+  background-color: #ffffff;
   border: 1px solid #ddd;
   padding: 10px;
   width: 200px;
