--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -24,7 +24,7 @@
                         <span class="cart-count">{{ cartItemCount }}</span>
                     </a>
                     <div class="cart-preview-dropdown" *ngIf="showCartPreview">
-                        <app-cart-preview [custId]="customerId"></app-cart-preview>
+                        <app-cart-preview [cartId]="cartId"></app-cart-preview>
                     </div>
                 </li>
                 <li>
