--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -9,7 +9,6 @@
   justify-content: space-between;
   align-items: center;
   padding: 0 25px;
-  margin: 0 auto;
 }
 
 .brand-logo a {
@@ -31,6 +30,10 @@
   padding: 0;
 }
 
+.nav-links ul li {
+  position: relative;
+}
+
 .nav-links ul li a {
   color: #ffffff;
   text-decoration: none;
@@ -42,37 +45,51 @@
   text-decoration: underline;
 }
 
-.cart-item {
-  position: relative;
-}
-
-.cart-item .cart-count {
+.cart-item .cart-count,
+.profile-item .profile-icon {
   color: #fff;
-  padding: 0px 5px;
-  font-size: 15px;
-  position: absolute;
+  font-size: 14px;
+  margin-left: 5px;
 }
 
-.cart-preview-dropdown {
+.cart-preview-dropdown,
+.profile-preview-dropdown {
   position: absolute;
   top: 100%;
   right: 0;
   background-color: #ffffff;
   border: 1px solid #ddd;
   padding: 10px;
-  width: 200px;
+  width: 220px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   z-index: 1000;
+  border-radius: 8px;
 }
 
-.cart-preview-dropdown ul {
+.cart-preview-dropdown ul,
+.profile-preview-dropdown ul {
   list-style: none;
   padding: 0;
   margin: 0;
 }
 
-.cart-preview-dropdown li {
+.cart-preview-dropdown li,
+.profile-preview-dropdown li {
+  padding: 5px 0;
   display: flex;
   justify-content: space-between;
-  padding: 5px 0;
+}
+
+.profile-preview-dropdown {
+  text-align: left;
+}
+
+.profile-preview-dropdown .profile-header {
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+
+.profile-preview-dropdown .profile-details {
+  font-size: 14px;
+  line-height: 1.5;
 }
