--- a/src/app/components/cart-preview/cart-preview.component.html
+++ b/src/app/components/cart-preview/cart-preview.component.html
@@ -6,7 +6,7 @@
     </div>
     <div class="cart-actions">
       <button class="btn btn-primary" routerLink="/cart">View Cart</button>
-      <button class="btn btn-success" routerLink="/checkout-dialog" (click)="onCheckoutClick()">Checkout</button>
+      <button class="btn btn-success" (click)="onCheckoutClick()">Checkout</button>
     </div>
   </div>
 </div>
