--- a/src/app/components/checkout-dialog/checkout-dialog.component.html
+++ b/src/app/components/checkout-dialog/checkout-dialog.component.html
@@ -1,8 +1,10 @@
-<h2 mat-dialog-title>Confirm Checkout</h2>
-<mat-dialog-content>
-  <p>Are you sure you want to checkout your cart?</p>
-</mat-dialog-content>
-<mat-dialog-actions align="end">
-  <button mat-button mat-dialog-close>Cancel</button>
-  <button mat-raised-button color="primary" (click)="onConfirm()">Go To Checkout</button>
-</mat-dialog-actions>
+<div class="checkout-dialog">
+  <h2 mat-dialog-title>Confirm Checkout</h2>
+  <mat-dialog-content>
+    <p>Are you sure you want to checkout your cart?</p>
+  </mat-dialog-content>
+  <div class="dialog-actions">
+    <button mat-button type="button" (click)="onCancel()">Cancel</button>
+    <button mat-raised-button color="primary" type="submit" (click)="onConfirm()">Go To Checkout</button>
+  </div>
+</div>
