--- a/src/app/components/register-dialog/register-dialog.component.html
+++ b/src/app/components/register-dialog/register-dialog.component.html
@@ -1,1 +1,44 @@
-<p>register-dialog works!</p>
+<div class="register-dialog">
+    <h2 mat-dialog-title>Register</h2>
+    <form [formGroup]="registerForm" (ngSubmit)="submit()">
+        <mat-form-field appearance="outline" class="full-width">
+            <mat-label>Username</mat-label>
+            <input matInput formControlName="username" />
+            <mat-error *ngIf="registerForm.get('username')?.hasError('required')">
+                Username is required
+            </mat-error>
+            <mat-error *ngIf="registerForm.get('username')?.hasError('minlength')">
+                Minimum 3 characters
+            </mat-error>
+        </mat-form-field>
+
+        <mat-form-field appearance="outline" class="full-width">
+            <mat-label>Email</mat-label>
+            <input matInput formControlName="email" />
+            <mat-error *ngIf="registerForm.get('email')?.hasError('required')">
+                Email is required
+            </mat-error>
+            <mat-error *ngIf="registerForm.get('email')?.hasError('email')">
+                Enter a valid email
+            </mat-error>
+        </mat-form-field>
+
+        <mat-form-field appearance="outline" class="full-width">
+            <mat-label>Password</mat-label>
+            <input matInput type="password" formControlName="password" />
+            <mat-error *ngIf="registerForm.get('password')?.hasError('required')">
+                Password is required
+            </mat-error>
+            <mat-error *ngIf="registerForm.get('password')?.hasError('minlength')">
+                Minimum 6 characters
+            </mat-error>
+        </mat-form-field>
+
+        <div class="dialog-actions">
+            <button mat-button type="button" (click)="close()">Cancel</button>
+            <button mat-raised-button color="primary" type="submit" [disabled]="registerForm.invalid">
+                Register
+            </button>
+        </div>
+    </form>
+</div>
