services is added for register and login to the profile-review component

--- a/src/app/components/login-dialog/login-dialog.component.html
+++ b/src/app/components/login-dialog/login-dialog.component.html
@@ -1,1 +1,33 @@
-<p>login-dialog works!</p>
+<div class="login-dialog">
+    <h2 mat-dialog-title>Login</h2>
+    <form [formGroup]="loginForm" (ngSubmit)="submit()">
+        <mat-form-field appearance="outline" class="full-width">
+            <mat-label>Username</mat-label>
+            <input matInput formControlName="username" />
+            <mat-error *ngIf="loginForm.get('username')?.hasError('required')">
+                Username is required
+            </mat-error>
+            <mat-error *ngIf="loginForm.get('username')?.hasError('minlength')">
+                Minimum 3 characters
+            </mat-error>
+        </mat-form-field>
+
+        <mat-form-field appearance="outline" class="full-width">
+            <mat-label>Password</mat-label>
+            <input matInput type="password" formControlName="password" />
+            <mat-error *ngIf="loginForm.get('password')?.hasError('required')">
+                Password is required
+            </mat-error>
+            <mat-error *ngIf="loginForm.get('password')?.hasError('minlength')">
+                Minimum 6 characters
+            </mat-error>
+        </mat-form-field>
+
+        <div class="dialog-actions">
+            <button mat-button type="button" (click)="close()">Cancel</button>
+            <button mat-raised-button color="primary" type="submit" [disabled]="loginForm.invalid">
+                Login
+            </button>
+        </div>
+    </form>
+</div>
