--- a/src/app/components/profile-preview/profile-preview.component.html
+++ b/src/app/components/profile-preview/profile-preview.component.html
@@ -3,7 +3,7 @@
     <div class="profile-preview">
         <div class="profile-actions">
             <button class="btn btn-primary" routerLink="/register-dialog" (click)="onRegisterClick()">Register</button>
-            <button class="btn btn-success" routerLink="/login-dialog">Login</button>
+            <button class="btn btn-success" routerLink="/login-dialog" (click)="onLoginClick()">Login</button>
         </div>
     </div>
 </div>
