--- a/src/app/components/profile-preview/profile-preview.component.html
+++ b/src/app/components/profile-preview/profile-preview.component.html
@@ -2,8 +2,8 @@
     <i class="bi bi-cart3 cart-icon"></i>
     <div class="profile-preview">
         <div class="profile-actions">
-            <button class="btn btn-primary" routerLink="/register-dialog" (click)="onRegisterClick()">Register</button>
-            <button class="btn btn-success" routerLink="/login-dialog" (click)="onLoginClick()">Login</button>
+            <button class="btn btn-primary" (click)="onRegisterClick()">Register</button>
+            <button class="btn btn-success" (click)="onLoginClick()">Login</button>
         </div>
     </div>
 </div>
