SignOut is implemented and working fine, removing items from localStorage

--- a/src/app/components/profile-preview/profile-preview.component.css
+++ b/src/app/components/profile-preview/profile-preview.component.css
@@ -1,9 +1,13 @@
 .profile-preview .profile-actions {
-    display: flex;
-    justify-content: space-between;
-    gap: 5px;
-  }
-  
-  .profile-preview .profile-actions button {
-    flex: 1;
-  }
+  display: flex;
+  justify-content: space-between;
+  gap: 5px;
+}
+
+.profile-preview .profile-actions button {
+  flex: 1;
+}
+
+.profile-info {
+  color: #000;
+}
