--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
-<div>
+<div class="app-container">
   <app-header></app-header>
-  <router-outlet />
+  <div class="content">
+    <router-outlet></router-outlet>
+  </div>
   <app-footer></app-footer>
 </div>
