Component rename from SignOut to LogOut and when user logs out the cartCount is getting reset

--- a/src/app/components/profile-preview/profile-preview.component.html
+++ b/src/app/components/profile-preview/profile-preview.component.html
@@ -7,7 +7,7 @@
                 <p>Customer: {{ customerId }}</p>
             </div>
             <div class="sign-out">
-                <button class="btn btn-primary" (click)="onSignOut()">Sign Out</button>
+                <button class="btn btn-primary" (click)="onLogOut()">Sign Out</button>
             </div>
         </ng-container>
         <ng-template #guestView>
