cartService is refactored and delete function is added

--- a/src/app/pages/cart-page/cart-page.component.html
+++ b/src/app/pages/cart-page/cart-page.component.html
@@ -8,11 +8,14 @@
             <div class="col-md-2">
                 <img [src]="item.productImageUrl" class="img-fluid" alt="{{ item.productShortName }}">
             </div>
-            <div class="col-md-8">
+            <div class="col-md-2">
                 <h5>{{ item.productName }}</h5>
                 <p class="text-muted">Category: {{ item.categoryName }}</p>
                 <p>Price: ${{ item.productPrice }}</p>
                 <p>Quantity: {{ item.quantity }}</p>
+            </div>
+            <div class="button-group col-md-2">
+                <button class="btn btn-danger" (click)="onRemoveItemFromCart(item)">Remove</button>
             </div>
         </div>
         <!-- Total Price -->
