cartId is not a string.

--- a/src/app/components/cart-preview/cart-preview.component.html
+++ b/src/app/components/cart-preview/cart-preview.component.html
@@ -3,6 +3,8 @@
   <div class="cart-preview">
     <div class="cart-subtotal">
       <ng-container *ngIf="cartItemCount !== 0; else emptyCart">
+        <span *ngIf="cartItemCount > 0" class="cart-count">Count: {{ cartItemCount }}</span>
+        <br>
         <span>Subtotal: ${{ cartTotal }}</span>
       </ng-container>
       <ng-template #emptyCart>
