login and logout implementation is updated.

--- a/src/app/components/logout-dialog/logout-dialog.component.html
+++ b/src/app/components/logout-dialog/logout-dialog.component.html
@@ -2,7 +2,7 @@
     <h2 mat-dialog-title>Sign Out</h2>
     <p>Are you sure you want to sign out?</p>
     <div class="dialog-actions">
-        <button mat-raised-button color="primary" type="button" (click)="confirmSignOut()">Yes</button>
+        <button mat-raised-button color="primary" type="button" (click)="confirmLogOut()">Yes</button>
         <button mat-button type="button" (click)="cancel()">Cancel</button>
     </div>
 </div>
