--- a/src/app/components/top-nav/top-nav.component.html
+++ b/src/app/components/top-nav/top-nav.component.html
@@ -2,21 +2,15 @@
     <div class="nav-items">
         <div class="contact-info">
             <i class="fa fa-envelope"></i>
-            <a href="mailto:info@company.com">info&#64;company.com</a>
+            <a href="mailto:fehmi.balt@gmail.com">fehmi.balt&#64;gmail.com</a>
             <i class="fa fa-phone"></i>
-            <a href="tel:010-020-0340">010-020-0340</a>
+            <a href="tel:010-020-0340">6178505304</a>
         </div>
         <div class="social-links">
-            <a href="https://fb.com/templatemo" target="_blank" rel="sponsored">
-                <i class="fab fa-facebook-f"></i>
+            <a href="https://www.github.com/" target="_blank">
+                <i class="fab fa-github"></i>
             </a>
-            <a href="https://www.instagram.com/" target="_blank">
-                <i class="fab fa-instagram"></i>
-            </a>
-            <a href="https://twitter.com/" target="_blank">
-                <i class="fab fa-twitter"></i>
-            </a>
-            <a href="https://www.linkedin.com/" target="_blank">
+            <a href="https://www.linkedin.com/in/fehmi-baltaci/" target="_blank">
                 <i class="fab fa-linkedin"></i>
             </a>
         </div>
